dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=fidecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=fidecoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=fidecoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=fidecoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=fidecoin-wallet.1
endif
endif
